...
    <string name="detail_label_amount">Amount</string>
    <string name="detail_label_lowest_bid">Lowest Bid</string>
    <string name="detail_label_empty"> </string>

    <!-- Strings related to DetailActivity -->
    <string name="button_placeholder">Button</string>
    <string name="button_all_bids_task">Show All Bids</string>
    <string name="button_place_bid">Place Bid</string>
    <string name="button_accept_bid">Accept Bid</string>
    <string name="button_decline_bid">Decline Bid</string>
    <string name="button_delete_task">Delete Task</string>
    <string name="button_edit_task">Edit Task</string>
    <string name="button_complete_task">Mark Done</string>
    <string name="button_unassign_task">Unassign Task</string>
    <string name="button_task_location">Show Location</string>


    <!-- TESTING STRINGS DO NOT USE IN MAIN PRODUCTION -->
    <string name="hugeString">
        Old man caught a strong weedleOld man caught a strong weedle
...
